--- a/Tareas/02_Carro/02.ipynb
+++ b/Tareas/02_Carro/02.ipynb
@@ -128,12 +128,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los coeficientes x0, v0, a_x son [ 0.3351892  -0.69353064  0.70643044].\n"
+     ]
+    }
+   ],
    "source": [
     "def fitfunc(t,x0,v0,a): # Función a ajustar\n",
     "    return x0 + v0*t + 0.5*a*(t**2)\n",
     "\n",
-    "param = curve_fit(fitfunc, filtered_data[:,0], filtered_data[:,1])[0]   # Cálculo de parámetros del ajuste"
+    "param = curve_fit(fitfunc, filtered_data[:,0], filtered_data[:,1])[0]   # Cálculo de parámetros del ajuste\n",
+    "\n",
+    "print(f\"Los coeficientes x0, v0, a_x son {param}.\")"
    ]
   },
   {
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.32 µs ± 95.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "3.57 µs ± 1.04 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -255,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.85 µs ± 1.3 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "5.14 µs ± 646 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
