--- a/Tareas/01_Parabola/01_Parabola.ipynb
+++ b/Tareas/01_Parabola/01_Parabola.ipynb
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "herrcomp",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -133,11 +133,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b447fe641c03edaa635bce0c96df1e869fa5cd7fe0fabea2fbf324f51047b4b3"
+    "hash": "c98924fb2474a8d65f3ff65c74422614500910c1ccaa42b65c0a4f9f730f1862"
    }
   }
  },
