--- a/Analogica/L2/L2.ipynb
+++ b/Analogica/L2/L2.ipynb
@@ -227,6 +227,23 @@
    "source": [
     "Resistencia total del circuito:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resistencia total: 16.394158088935704\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Resistencia total: {1/(bw*2*np.pi*2.2e-6)}\")"
+   ]
   }
  ],
  "metadata": {
