--- a/herrcomp/Tareas/05_Integrales/numint.ipynb
+++ b/herrcomp/Tareas/05_Integrales/numint.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "source": [
     "### Integración de datos \"experimentales\"\n",
-    "by Martina García Mejía"
+    "Martina García Mejía\n",
+    "\n",
+    "Leidy Paola Guevara Diaz\n",
+    "\n",
+    "\n",
+    "... y el resto? bien, gracias"
    ]
   },
   {
@@ -19,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +117,7 @@
        "Text(0.5, 1.0, 'Posición')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
