comment, pdf png

--- a/herrcomp/Tareas/06_Matriz/matrixspectra.ipynb
+++ b/herrcomp/Tareas/06_Matriz/matrixspectra.ipynb
@@ -147,7 +147,7 @@
     "matrixplot(ax1,tr,det,type_area, type_line)\n",
     "style(ax1, 'Tr(A)', 'det(A)', 'Diagrama de Poincaré: Clasificación de retratos de fase')\n",
     "\n",
-    "fig.savefig('matrixspectra.png', dpi=300)"
+    "fig.savefig('matrixspectra.png', dpi=300)   # La exportación se hizo en PNG y se covirtió manualmente porque si se exportaba en PDF el archivo resultante era ridículamente pesado"
    ]
   }
  ],
