--- a/cuantica/Taller2-8.ipynb
+++ b/cuantica/Taller2-8.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Taller 2 - P8\n",
+    "\n",
+    "* Joshue Galvis Perilla\n",
+    "* Martina García Mejía\n",
+    "* Leidy Guevara Díaz\n",
+    "* Andrés Mustafa Russi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Importemos cosas:"
    ]
   },
@@ -23,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1."
+    "### Punto 1"
    ]
   },
   {
@@ -196,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.\n",
+    "### Punto 2\n",
     "Construyamos los proyectores:"
    ]
   },
@@ -230,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.\n",
+    "### Punto 3\n",
     "Evaluemos $|1\\rangle \\langle 1| f2 \\rangle$, $|s1\\rangle \\langle s1| f2 \\rangle$ y $|c2\\rangle \\langle c2| f2 \\rangle$:"
    ]
   },
@@ -289,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.\n",
+    "### Punto 4\n",
     "Tenemos que\n",
     "\n",
     "$|s1\\rangle \\langle s1 |c2\\rangle \\langle c2| f2 \\rangle$\n",
