--- a/thermodynamics/exp3/e3.ipynb
+++ b/thermodynamics/exp3/e3.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Ajuste para la temperatura:\n",
-    "coeff = np.polyfit(equiv[:,0],equiv[:,1],12)\n",
+    "coeff = np.polyfit(equiv[:,0],equiv[:,1],12)    # Ya sé que habían mejores modos pero tengo sueño\n",
     "x = np.linspace(equiv[0,0],equiv[-1,0],100)\n",
     "\n",
     "# Revoluciones y temperatura\n",
@@ -149,17 +149,10 @@
     "\n",
     "# Calor y trabajo\n",
     "m,c = (310, 0.215)\n",
-    "m_q = [m*c*(t-temp[0]) for t in temp]\n",
+    "m_q = [m*c*(t-temp[0]) for t in temp]   # Calor\n",
     "\n",
-    "hm, g, r = (18.65, 9.8, 0.028) # Originalmente era 3.492\n",
-    "m_w = [hm*g*r*(2*np.pi)*n for n in rev]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "note to self: hacer esto a tiempo porque quedó a la maldita sea"
+    "hm, g, r = (18.65, 9.8, 0.028)          # Originalmente la masa colgante hm era 3.492\n",
+    "m_w = [hm*g*r*(2*np.pi)*n for n in rev] # Trabajo mecánico"
    ]
   },
   {
@@ -179,7 +172,7 @@
     }
    ],
    "source": [
-    "coeff1 = np.polyfit(m_q,m_w,1)\n",
+    "coeff1 = np.polyfit(m_q,m_w,1)  # El primer coeficiente es el equivalente\n",
     "x1 = np.linspace(m_q[0],m_q[-1],100)\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
