electric equivalent, first implementation

--- a/thermodynamics/exp3-4/equivmec.ipynb
+++ b/thermodynamics/exp3-4/equivmec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,10 @@
     "5,936.1 98\n",
     "5,749.3 99\n",
     "5,569.3 100'''\n",
-    "equiv = np.array([list(map(float, string.split(','))) for string in [i for i in equiv_raw.replace('.','').replace(',','.').replace(' ',',').split('\\n')]])"
+    "\n",
+    "equiv = np.array([list(map(float, string.split(','))) \n",
+    "                for string in [i for i in \n",
+    "                               equiv_raw.replace('.','').replace(',','.').replace(' ',',').split('\\n')]])"
    ]
   },
   {
