--- a/thermodynamics/exp4/report/main.tex
+++ b/thermodynamics/exp4/report/main.tex
@@ -110,17 +110,33 @@ Asumiendo una temperatura inicial $T_i$, obtenemos:
 \begin{align}
     T(t) = T_A + (T_i-T_f)e^{-\frac{t}{\tau}}
 \end{align}
-En el caso donde el sistema 
-
+En el caso donde el sistema presente una fuente de energía que le proporcione calor, la energía suministrada la podemos expresar como: 
+\begin{align}
+    P = mc\frac{dT}{dt}
+\end{align}
+De donde obtenemos la siguiente expresión lineal para la temperatura: 
+\begin{align}
+    T =  T_A + \frac{P}{mc}t
+\end{align}
+Si en el sistema existen perdidas por convección el balance de energía debe expresarse de la siguiente manera: 
+\begin{align}
+    P = mc \frac{dT}{dt} + hA(T-T_A) \\ 
+    \frac{dT}{dt} = \frac{P}{mc} - \frac{hA}{mc}(T-T_A)
+\end{align}
+La solución de esta ecuación para un sistema que recibe calor de una fuente externa(fuente de voltaje) y además esta afectado por la ley de enfriamiento de Newton, variando desde la temperatura ambiente $T_A$ hasta una temperatura $T$
+\begin{align}
+    T = T_A +\frac{P}{hA}[1-e^{-\frac{hA}{mc}t}]
+\end{align}
 \section{Desarrollo experimental}
-El objetivo de esta practica es comprobar la validez de la ley de enfriamiento de Newton[ecuación(6)]. Con este objetivo en mente la practica consistió en partes, la primera en elevar la temperatura de 5 cilindros de (hierro o acero????)  y permitir que estos se enfriaran a temperatura ambiente mientras mediamos su temperatura en función del tiempo. 
-Para elevar la temperatura del cilindro fue sumergido en agua hasta alcanzar la temperatura de ebullición( ??), a su vez en su interior estaba dispuesto un termopar que media la temperatura al retirarlo y dejarlo suspendido mientras interacciona con el ambiente(Aire). Durante este proceso de enfriamiento con ayuda de un multimetro pudimos registrar el cambio de temperatura hasta que esta tomara un valor mas o menos constante o variara muy poco. El anterior procedimiento se repitió para 5 cilindros con diferentes geometrías.  \\ 
+El objetivo de esta practica es comprobar la validez de la ley de enfriamiento de Newton[ecuación(6)]. Con este objetivo en mente la practica consistió en dos partes, la primera en elevar la temperatura de 5 cilindros de (hierro o acero????)  y permitir que estos se enfriaran a temperatura ambiente mientras mediamos su temperatura en función del tiempo. 
+Para elevar la temperatura del cilindro, este fue sumergido en agua hasta alcanzar la temperatura de ebullición( $90°$), a su vez en su interior estaba dispuesto un termopar que media la temperatura al retirarlo y dejarlo suspendido mientras interacciona con el ambiente(Aire). Durante este proceso de enfriamiento con ayuda de un multimetro pudimos registrar el cambio de temperatura hasta que esta tomara un valor mas o menos constante o variara muy poco. El anterior procedimiento se repitió para 5 cilindros con diferentes geometrías.  \\ 
 La segunda parte de la practica consistió en aumentar la temperatura de un cilindro de bronce que contiene una resistencia eléctrica en su interior con ayuda de una fuente, la recolección de los datos de temperatura en función del tiempo fue exactamente igual que la primera parte.
 
 \subsection{Materiales e instrumentos}
+\begin{multicols}{2}
 \begin{itemize}
-    \item Multimetro
-    \item Fuente 
+    \item Multímetro
+    \item Fuente eléctrica 
     \item Estufa
     \item Recipiente de agua
     \item Termopar
@@ -135,6 +151,7 @@ La segunda parte de la practica consistió en aumentar la temperatura de un cili
         \item 5
         \end{itemize}
 \end{itemize}
+\end{multicols}
 
 \subsection{Montaje}
 \begin{figure}[H]
