moved report media to folder, added log(Temp) graphs

--- a/thermodynamics/exp4/report/main.tex
+++ b/thermodynamics/exp4/report/main.tex
@@ -156,7 +156,7 @@ La segunda parte de la practica consistió en aumentar la temperatura de un cili
 \subsection{Montaje}
 \begin{figure}[H]
     \centering
-    \includegraphics{Montaje.png}
+    \includegraphics{media/Montaje.png}
     \caption{Montaje experimental: Ley de enfriamiento.}
     
 \end{figure}
