--- a/thermodynamics/exp4/report/main.tex
+++ b/thermodynamics/exp4/report/main.tex
@@ -50,7 +50,7 @@
  
      \begin{center}
     % TÍTULO DEL TRABAJO
-        {\Large \textbf{Equivalente mecánico y eléctrico del calor}}\\
+        {\Large \textbf{Ley de enfriamiento de Newton}}\\
         \vspace{5mm}
         % AUTORES 
         {\small \textbf{A.F.Suarez Reyes $^{1}$},\textbf{J.S. Palacio Correa$^{2}$},\textbf{M. García Mejía$^{3}$} \\
@@ -154,7 +154,7 @@ La solución de esta ecuación para un sistema que recibe calor de una fuente ex
 \section{Desarrollo experimental}
 
 El objetivo de esta practica es comprobar la validez de la ley de enfriamiento de Newton[ecuación(6)]. Con este objetivo en mente la practica consistió en dos partes, la primera en elevar la temperatura de 5 cilindros de (hierro o acero????)  y permitir que estos se enfriaran a temperatura ambiente mientras mediamos su temperatura en función del tiempo. 
-Para elevar la temperatura del cilindro, este fue sumergido en agua hasta alcanzar la temperatura de ebullición( $90°$), a su vez en su interior estaba dispuesto un termopar que media la temperatura al retirarlo y dejarlo suspendido mientras interacciona con el ambiente(Aire). Durante este proceso de enfriamiento con ayuda de un multimetro pudimos registrar el cambio de temperatura hasta que esta tomara un valor mas o menos constante o variara muy poco. El anterior procedimiento se repitió para 5 cilindros con diferentes geometrías.  \\ 
+Para elevar la temperatura del cilindro, este fue sumergido en agua hasta alcanzar la temperatura de ebullición( $90°$), a su vez en su interior estaba dispuesto un termopar que media la temperatura al retirarlo y dejarlo suspendido mientras interacciona con el ambiente(Aire). Durante este proceso de enfriamiento con ayuda de un multímetro pudimos registrar el cambio de temperatura hasta que esta tomara un valor mas o menos constante o variara muy poco. El anterior procedimiento se repitió para 5 cilindros con diferentes geometrías.  \\ 
 La segunda parte de la practica consistió en aumentar la temperatura de un cilindro de bronce que contiene una resistencia eléctrica en su interior con ayuda de una fuente, la recolección de los datos de temperatura en función del tiempo fue exactamente igual que la primera parte.
 
 
@@ -186,6 +186,7 @@ La segunda parte de la practica consistió en aumentar la temperatura de un cili
     \centering
     \includegraphics{media/Montaje.png}
     \caption{Montaje experimental: Ley de enfriamiento.}
+
     
 \end{figure}
 
@@ -254,6 +255,7 @@ Vale la pena, además, considerar cómo estas constantes se relacionan con las c
         \caption{Primera medición}
     \end{subfigure}%
     ~ 
+    
     \begin{subfigure}[t]{0.5\textwidth}
         \centering
         \includegraphics[height=5cm]{media/TauvM.png}
