--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -39,6 +39,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "            y = data,\n",
+    "            line =  dict(shape =  'spline' ),\n",
+    "            name = 'original signal',\n",
+    "            showlegend=True\n",
+    "            ))\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,7 +69,17 @@
    "source": [
     "sig_noise_fft = fftpack.fft(data)\n",
     "sig_noise_amp = 2 / t.size * np.abs(sig_noise_fft)\n",
-    "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))"
+    "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "            x = sig_noise_freq,\n",
+    "            y = sig_noise_amp,\n",
+    "            line =  dict(shape =  'spline' ),\n",
+    "            name = 'fft of signal',\n",
+    "            showlegend=True\n",
+    "            ))\n",
+    "fig.show()"
    ]
   },
   {
@@ -96,7 +122,7 @@
    "outputs": [],
    "source": [
     "# Filter the data, and plot both the original and filtered signals.\n",
-    "y = butter_lowpass_filter(data, cutoff, fs, order)\n",
+    "filtered_data = butter_lowpass_filter(data, cutoff, fs, order)\n",
     "\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(\n",
@@ -105,7 +131,7 @@
     "            name = 'signal with noise'\n",
     "            ))\n",
     "fig.add_trace(go.Scatter(\n",
-    "            y = y,\n",
+    "            y = filtered_data,\n",
     "            line =  dict(shape =  'spline' ),\n",
     "            name = 'filtered signal'\n",
     "            ))\n",
